--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -207,6 +207,12 @@
         </details>
         <details>
             <summary>
+                Media-query
+            </summary>
+            <div class="media-query"></div>
+        </details>
+        <details>
+            <summary>
                 Transition
             </summary>
             <div class="transition"></div>
@@ -217,6 +223,51 @@
             </summary>
             <div class="divanimations">
                 <div class="animations"></div>
+            </div>
+        </details>
+        <details>
+            <summary>
+                Text Effect
+            </summary>
+            <div class="flex">
+                <div>
+                    <h2>Text Overflow: clip</h2>
+                    <p class="text-overflow clip">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <h2>Text Overflow: ellipsis</h2>
+                    <p class="text-overflow ellipsis">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
+                <div>
+                    <h2>Word Wrap</h2>
+                    <p class="word wrap">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+
+                </div>
+                <div>
+                    <h2>Word break</h2>
+                    <p class="word break">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
+            </div>
+        </details>
+        <details>
+            <summary>
+                Resize
+            </summary>
+            <div class="flex">
+                <div class="resize none">
+                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
+                <div class="resize vertical">
+                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
+                <div class="resize horizontal">
+                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
+                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
             </div>
         </details>
     </section>
