--- a/02_cuongnq/ThuchanhHTML5-CSS3/index.html
+++ b/02_cuongnq/ThuchanhHTML5-CSS3/index.html
@@ -2,94 +2,206 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Demo HTML5</title>
 	<link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
-	<header><h1>Đây là header</h1></header>
+	<header><h1>THẺ HEADER</h1></header>
+	<nav>
+		<h1>THẺ NAV</h1>
+		<ul>
+			<li><a href="#">item1</a></li>
+			<li><a href="#">item2</a></li>
+			<li><a href="#">item3</a></li>
+			<li><a href="#">item4</a></li>
+		</ul>
+	</nav>
 	<section>
-		<nav>
-			<h1>thẻ NAV</h1>
-			<ul>
-				<li><a href="#">HÀ NÔỊ</a></li>
-				<li><a href="#">HUÊ</a></li>
-				<li><a href="#">TP HCM</a></li>
-			</ul>
-		</nav>
+		<!-- article: Định nghĩa một bài viết, một nội dung riêng biệt. -->
 		<article>
-			<h1>ĐÂY LÀ ARTICLE</h1>
-		</article>
-		<p>the aside</p>
-		<aside>
-			<h4>Ha </h4>
-			<p>xac dinh noi dung co lien quan den noi dung chinh</p>
-		</aside>
-		<figure>
-			<img src="images/anhthiennhien.jpg" alt="anhthiennhien" width="250" height="300px">
-			<figcaption>Viet Nam</figcaption>
-		</figure>
-		<audio controls="controls">
-			<source src="https://mp3.zing.vn/bai-hat/Duyen-Minh-Lo-Huong-Tram/ZW9CBEEO.html?play_song=1" type="audio/mp3" />
-			<source src="https://mp3.zing.vn/bai-hat/Duyen-Minh-Lo-Huong-Tram/ZW9CBEEO.html?play_song=1" type="audio/ogg" />
-		</audio>
-	</section>
-	<!--Đây la section tiep theo-->
-	<section>
-		<h3>Thực hành về Canvas</h3>
-		<canvas id="myCanvas" width="578" height="200">
-			<script type="text/javascript">
-				var canvas = document.getElementById('myCanvas'),
-				ctx = canvas.getContext('2d');
-				ctx.strokeStyle = "#FF0000";
-				ctx.beginPath();
-				ctx.arc(95,50,40,0,2*Math.PI);
-				ctx.stroke();
-			</script>
-		</canvas>
-		<div id="datalist">
-			<input list="html" />
-			<datalist id="html">
-				<option value="Học HTML"></option>
-				<option value="Tham khảo HTML"></option>
-				<option value="Ví dụ HTML"></option>
-				<option value="Thực hành HTML"></option>
-			</datalist>
-		</div>
-		<details>
-			<summary>Học HTML</summary>
-			<p>Học từ cơ bản đến nâng cao.</p>
-			<p>Tham khảo những phần liên quan.</p>
-		</details>
-		<hgroup>
-			<h2>the hgoup</h2>
-			<h3>dinh nghia 1 nhom cac tieu de</h3>
-		</hgroup>
-		Thẻ Mark <mark>HTML</mark> thật là dễ.<br>
-		<p>the meter</p>
-		<meter value="1">100%</meter>
-	</section>
-	<section>
-	<form onsubmit="return false" oninput="result.value = num01.valueAsNumber + num02.valueAsNumber">
-<input name="num01" type="number"> + <input name="num02" type="number"> = <output name="result">NaN</output>
-</form>
-<p>Quá trình download được: <progress max="100" value="30">90%</progress></p>
-<p>hien thi noi dung khi trinh duyet khong ho tro ruby</p>
-<ruby>
-字 <rp>(</rp><rt>じ</rt><rp>)</rp>
-</ruby>
-<p>Thời gian làm việc từ <time>08:00</time> sáng các ngày trong tuần.</p>
-	</section>
+			<h1>THẺ ARTICEL</h1>
+			<video width="400" controls>
+				<source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
+				</video>
+				<br>
+				<p>Demo thẻ pogress:</p>
+				<progress value="22" max="100"></progress>
+				<br><p></p>
 
-	<section>
-		<video width="320" height="240" controls>
-  <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-<p>Đoạn text có thể làm vỡ <wbr>layoutttttttttttttttttttttttt</wbr></p>
+				<hr>
+				<!-- Tag <meter> định nghĩa một phép đo. -->
+				<!-- Tag <meter> cho giá trị tối thiểu hoặc tối đa. -->
+				<p>Demo thẻ meter<p>
+					<meter value="3" max="4" min="2">50%</meter><br><br>
+
+					<hr>
+					<!-- Demo the audio -->
+					<p>THẺ AUDIO</p>
+					<audio src="http://hocwebchuan.com/reference/tag/example/audio/Doan-Xuan-Ca.ogg" controls="controls">Trình duyệt của bạn không hỗ trợ thành phần audio.<audio>
+
+
+					</article>	
+
+					<!-- aside: Định nghĩa nội dung bên ngoài nội dung chính (thường là phần sidebar). -->
+					<aside>
+						<h1>THẺ ASIDE</h1>
+
+
+						<!-- Demo canvas -->
+						<p>THẺ CANVAS</p>
+						<!-- canvas: Được dùng để hiển thị đồ họa. -->
+						<canvas id="myCanvas" width="400" height="200"></canvas>
+						<script>
+    // Lấy đối tượng Canvas
+    var canvas = document.getElementById('myCanvas');
+
+    // Chọn đối tượng vẽ 2D
+    var context = canvas.getContext('2d');
+
+    // Tiến hành vẽ
+    context.beginPath();        // Khai báo vẽ đường thẳng mới
+    context.moveTo(10, 10);     // Điểm bắt đầu
+    context.lineTo(490, 190);   // Điểm kết thúc
+    context.stroke();           // Tiến hành vẽ
+</script>
+<!-- End canvas -->
+
+
+
+<!-- Demo details -->
+<details>
+	<summary>Copyright 1999-2018.</summary>
+	<p> - by Refsnes Data. All Rights Reserved.</p>
+	<p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
+</details>
+
+</aside>
+</section>
+<br>
+<section>
+	<article>
+		<!-- Tag <command> k chay javascript. -->
+		<menu>
+			<command onclick="alert(‘Đây là dòng thông báo’)" label="comLabel">Button</command>
+		</menu>
+
+		<!-- Định nghĩa một danh sách tùy chọn -->
+		<p>thẻ data ist</p>
+		<input list="html"/>
+		<datalist id="html">
+			<option value="Học HTML" ></option>
+			<option value="Tham khảo HTML"></option>
+			<option value="Ví dụ HTML"></option>
+			<option value="Thực hành HTML"></option>
+		</datalist>
+		<!--End Demo data list -->
+
+		<br>
+		<!-- Tag <embed /> xác định nội dung nhúng như một plugin. -->
+		<!-- Tag <embed /> thường được dùng để chèn flash. -->
+		<p>thẻ embed</p>
+		<embed src="https://www.w3schools.com/tags/helloworld.swf" />
+
+		<!-- Demo the figure va figcaption -->
+		<!-- Xác định các nội dung liên quan mạch lạc với nhau, như hình ảnh, sơ đồ, code,... -->
+		<figure>
+			<!-- Xác định một chú thích cho tag figure. -->
+			<p><img src="images/anhthiennhien.jpg" alt="My flower" width="400" height="200" /></p>
+			<figcaption>chú thích cho ảnh</figcaption>
+			<figure>
+			</article>
+			<aside>
+				<!-- <hgroup>	Định nghĩa một nhóm các tiêu đề. -->
+				<p>thẻ hgroup</p>
+
+				<hgroup>
+					<h2>HTML5</h2>
+					<h3>Tag HTML5</h3>
+				</hgroup>
+
+				<!-- Xác định một cặp trường khóa chính sử dụng cho form. -->
+				<hr>
+				
+
+				<!-- sử dụng khi muốn làm nổi bật văn bản của mình. -->
+				<hr>
+				<br>
+				<p>thẻ mark</p>
+				<p>Học <mark>HTML</mark> thật là dễ.</p> 
+
+
+
+				<hr>
+				<p>thẻ output</p>
+				<form action="" onsubmit="return false" oninput="result.value = num01.valueAsNumber + num02.valueAsNumber">
+					<input name="num01" type="number" /> + <input name="num02" type="number" /> = <output name="result" >
+				</output>
+			</form>
+
+			<hr>
+			<!--thẻ rp hiển thị nội dung khi trình duyệt k hỗ trợ ruby -->
+			<!--thẻ rt Định nghĩa một lời giải thích -->
+			<!-- thẻ ruby Định nghĩa một chú thích ruby -->
+			<ruby style="font-size: 40px">
+				hello world<rp>(</rp><rt>chào thế giới</rt><rp>)</rp>
+			</ruby>
+
+		</aside>
 	</section>
-	<footer>
-		<p>FOOTER</p>
-	</footer>
-</body>
-</html>
+	<br>
+	<section>
+		<article>
+			<!-- thẻ source dùng để xác định nguồn 1 media-->
+			<p>thẻ source</p>
+			<video controls="controls" poster="index.files/coutdown.jpg" width="400" height="240">
+				<source src="http://hocwebchuan.com/reference/tag/example/movie/coutdown.mp4" type="video/mp4">
+					<source src="http://hocwebchuan.com/reference/tag/example/movie/coutdown.ogv" type="video/ogg">
+						<p>Trình duyệt của bạn không hỗ trợ thẻ video</p>
+					</video>
+
+					<hr>
+					<p>thẻ time</p>
+					<p>Thời gian làm việc từ <mark><time>08:00</time></mark>sáng các ngày trong tuần.</p>
+
+					<hr>
+					<p class="wrapBlock" style="width: 150px;border: 1px solid red;">Đoạn text có thể làm <wbr>vỡoooooooooooo</wbr> layout</p>
+				</article>
+				<aside>
+					<p>Count numbers: <output id="result"></output></p>
+					<button onclick="startWorker()">Start Worker</button> 
+					<button onclick="stopWorker()">Stop Worker</button>
+
+					<script>
+						var w;
+
+						function startWorker() {
+							if(typeof(Worker) !== "undefined") {
+								if(typeof(w) == "undefined") {
+									w = new Worker("demo_workers.js");
+								}
+								w.onmessage = function(event) {
+									document.getElementById("result").innerHTML = event.data;
+								};
+							} else {
+								document.getElementById("result").innerHTML = "Sorry! No Web Worker support.";
+							}
+						}
+
+						function stopWorker() { 
+							w.terminate();
+							w = undefined;
+						}
+					</script>
+
+				</aside>
+			</section>
+
+			<footer> 
+				<h1>
+					THẺ FOOTER
+				</h1>
+			</footer>
+
+		</body>
+		</html>
+
