--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -232,22 +232,22 @@
             <div class="flex">
                 <div>
                     <h2>Text Overflow: clip</h2>
-                    <p class="text-overflow clip">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p class="text-overflow clip">Clip: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh
+                        biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                     <h2>Text Overflow: ellipsis</h2>
-                    <p class="text-overflow ellipsis">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p class="text-overflow ellipsis">Ellipsis: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
+                        anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
                 <div>
                     <h2>Word Wrap</h2>
-                    <p class="word wrap">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p class="word wrap"> Word wap: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
+                        anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
 
                 </div>
                 <div>
                     <h2>Word break</h2>
-                    <p class="word break">Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p class="word break">Word break: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
+                        anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
             </div>
         </details>
@@ -257,17 +257,34 @@
             </summary>
             <div class="flex">
                 <div class="resize none">
-                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p>None: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh
+                        biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
                 <div class="resize vertical">
-                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p>Vertical: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
+                        anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
                 <div class="resize horizontal">
-                    <p>Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh biết
-                        trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                    <p>Horizontal: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
+                        anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
+            </div>
+        </details>
+        <details>
+            <summary>
+                Outline Offset
+            </summary>
+            <div class="outline-offset">
+                <p>Và anh biết, anh biết em sẽ quên hết</p>
+            </div>
+        </details>
+        <details>
+            <summary>
+                Transfrom 2D, 3D
+            </summary>
+            <div class="flex">
+                <div class="transfrom d2">Transfrom 2D</div>
+                <div class="transfrom d3">Transfrom 3D</div>
             </div>
         </details>
     </section>
