--- a/02_cuongnq/Thuchanh HTML5/index.html
+++ b/02_cuongnq/Thuchanh HTML5/index.html
@@ -80,13 +80,9 @@
 <br>
 <section>
 	<article>
-		<!-- Tag <command> k chay javascript. -->
-		<menu>
-			<command onclick="alert(‘Đây là dòng thông báo’)" label="comLabel">Button</command>
-		</menu>
 
 		<!-- Định nghĩa một danh sách tùy chọn -->
-		<p>thẻ data ist</p>
+		<p>thẻ datalist</p>
 		<input list="html"/>
 		<datalist id="html">
 			<option value="Học HTML" ></option>
@@ -94,6 +90,13 @@
 			<option value="Ví dụ HTML"></option>
 			<option value="Thực hành HTML"></option>
 		</datalist>
+
+		<select name="" id="">
+			<option value="">sdfsdfg</option>
+			<option value="">sdfsdfg</option>
+			<option value="">sdfsdfg</option>
+			<option value="">sdfsdfg</option>
+		</select>
 		<!--End Demo data list -->
 
 		<br>
