--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -274,6 +274,10 @@
                     <p>Horizontal: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết,
                         anh biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
                 </div>
+                <div class="resize both">
+                    <p>Both: Và anh biết, anh biết em sẽ quên hết Những bài tình ca anh đã viết riêng tặng em Và anh biết, anh
+                        biết trái tim em có Hình bóng ai kia đâu chỉ riêng anh.</p>
+                </div>
             </div>
         </details>
         <details>
