--- a/02_cuongnq/thuchanh CSS3/index.html
+++ b/02_cuongnq/thuchanh CSS3/index.html
@@ -6,45 +6,57 @@
 	<link rel="stylesheet" type="text/css" href="css/style3.css">
 </head>
 <body>
-<header>
-<h2>header</h2>
-</header>
- <nav>
-        <ul class="menu">
-            <li><a href="#">item1</a></li>
-            <li><a href="#">item2</a></li>
-            <li><a href="#">item3</a></li>
-            <li><a href="#">item4</a></li>
-            <li><a href="#">item5</a></li>
+	<header>
+		<h2>header</h2>
+	</header>
+	<nav>
+		<ul class="menu">
+			<li><a href="#">item1</a></li>
+			<li><a href="#">item2</a></li>
+			<li><a href="#">item3</a></li>
+			<li><a href="#">item4</a></li>
+			<li><a href="#">item5</a></li>
 
 
-        </ul>
-    </nav>
-<section>
-<div id="rol1">
-	<div id="example2">
-<p>The background extends to the inside edge of the border.</p>
-</div>
-<div id="border">
-<p>border radius</p>
-</div>
-<p id="borderimg1">border-image: url(border.png) 50 round;</p>
-<h1>Text-shadow effect!</h1>
-<div id="box-shadow">This is a div element with a box-shadow</div>
-<h3>Transition + Transform</h3>
+		</ul>
+	</nav>
+	<section>
+		<div id="rol1">
+			<div id="example2">
+				<p>The background extends to the inside edge of the border.</p>
+			</div>
+			<div id="border">
+				<p>border radius</p>
+			</div>
+			<p id="borderimg1">border-image: url(border.png) 50 round;</p>
+			<h1>Text-shadow effect!</h1>
+			<div id="box-shadow">This is a div element with a box-shadow</div>
+			<h3>Transition + Transform</h3>
 
-<p>Hover over the div element below:</p>
+			<p>Hover over the div element below:</p>
 
-<div id="Transform"></div>
-</div>
-<div id="rol2">
-<div id="grad4"></div>
-<div id="grad2"></div>
-<div id="ani"></div>
-</div>
-</section>
-<footer>
-<h4>footer</h4>
-</footer>
+			<div id="Transform"></div>
+			<div class="user-interface">
+
+				<p class="text-overflow">
+					Chào mừng các bạn đến với buổi thuyết trình ngày hôm nay
+				</p>
+				<p class="word-wrap">
+					Chào mừng các bạn đến với buổi thuyết trình ngày hôm nay
+				</p>
+				<p class="word-break">
+					Chào mừng các bạn đến với buổi thuyết trình ngày hôm nay
+				</p>
+			</div>
+		</div>
+		<div id="rol2">
+			<div id="grad4"></div>
+			<div id="grad2"></div>
+			<div id="ani"></div>
+			<div class="newspaper">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
+			</div>
+		</div>
+	</section>
 </body>
 </html>
