--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -10,27 +10,25 @@
 </head>
 
 <body>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li>
-                    <a href="">Menu 1</a>
-                </li>
-                <li>
-                    <a href="">Menu 2</a>
-                </li>
-                <li>
-                    <a href="">Menu 3</a>
-                </li>
-                <li>
-                    <a href="">Menu 4</a>
-                </li>
-                <li>
-                    <a href="">Menu 5</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="menu">
+        <ul>
+            <li>
+                <a href="">Menu 1</a>
+            </li>
+            <li>
+                <a href="">Menu 2</a>
+            </li>
+            <li>
+                <a href="">Menu 3</a>
+            </li>
+            <li>
+                <a href="">Menu 4</a>
+            </li>
+            <li>
+                <a href="">Menu 5</a>
+            </li>
+        </ul>
+    </nav>
 
     <section>
         <h2>Demo HTML5</h2>
@@ -84,8 +82,7 @@
             <summary>
                 Canvas
             </summary>
-            <Canvas id="myCanvas">
-            </Canvas>
+            <Canvas id="myCanvas"></Canvas>
             <script>
                 window.onload = function () {
                     var canvas = document.getElementById("myCanvas");
@@ -147,7 +144,7 @@
                 Output
             </summary>
             <form oninput="tong.value=stra.value+strb.value">
-                <input type="text" name="stra">
+                <input type="text"  name="stra">
                 <input type="text" name="strb">
                 <output name="tong" for="stra strb"></output>
             </form>
