--- a/04_datht/demo html css/demo-css-shadow-gradient.html
+++ b/04_datht/demo html css/demo-css-shadow-gradient.html
@@ -8,8 +8,18 @@ img{
 }
 #grad1 {
     height: 200px;
+    width: 500px;
     background: red;
     background: linear-gradient(red, yellow);
+}
+#grad2 {
+    height: 200px;
+    width: 500px;
+    background: red;
+    background: radial-gradient(red, yellow);
+}
+
+
 </style>
 </head>
 <body>
@@ -19,6 +29,8 @@ img{
 	<img id="img" width="200px"  src="images/klematis4_big.jpg" alt="">
 	<br><br>
 	<div id="grad1"></div>
+	<br><br>
+	<div id="grad2"></div>
 </div>
 </body>
 </html>
