--- a/06_trongnd/demo.html
+++ b/06_trongnd/demo.html
@@ -81,6 +81,7 @@
               <p>Luka Mordric là tiền vệ trung tâm của Real</p>
               <p>Laaa aaaaa aaaaa aaaa aaaaa aaaaaaa aaaaaaaa aaaaaaaa</p>
           </div>
+          <div class="ex1">This div has a 4 pixels solid red outline 15 pixels outside the border edge.</div>
           
   </div>
  
