update đổi màu meter

--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -136,7 +136,7 @@
             </summary>
             <p>Học
                 <mark> HTML</mark> thật là khó.</p>
-            <meter value="75" min="0" max="100">70%</meter>
+            <meter min="0" max="100" low="20" optimum="50" high="80" value="80" ></meter>
             <progress></progress>
         </details>
         <details>
