--- a/05_tupa/html5&css3/test.html
+++ b/05_tupa/html5&css3/test.html
@@ -17,6 +17,10 @@
 	<meter value=".9" high=".8"></meter>
 	<meter value=".1" low=".2" high=".8" optimum=".9"></meter>
 	<meter value=".9" low=".2" high=".8" optimum=".1"></meter>
-
+	<style>
+		meter::-webkit-meter-optimum-value {
+  			background: pink;
+  		}
+	</style>
 </body>
 </html>
