thuc hanh cat web

--- a/01_thangnv/demo-html5-css3/index.html
+++ b/01_thangnv/demo-html5-css3/index.html
@@ -225,7 +225,7 @@
                 Animations
             </summary>
             <div class="divanimations">
-                <div class="animations"></div>
+                <div class="animation"></div>
             </div>
         </details>
         <details>
@@ -299,6 +299,7 @@
         Thẻ article
     </article>
     <footer>Đây là thẻ footer</footer>
+    <textarea>sadasdassssssssssssssssssssssssssssssssssss</textarea>
 </body>
 
 </html>
