--- a/04_datht/demo html css/test.html
+++ b/04_datht/demo html css/test.html
@@ -4,13 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		img{
-			opacity: 0.6;
-			width: 200px;
-
+		li{
+			display: inline;
+		}
 	</style>
 </head>
 <body>
-	<img src="images/dau.jpg"/>
+	<ul>
+		<li>1</li>
+		<li>2</li>
+		<li>3</li>
+		<li>4</li>
+	</ul>
 </body>
 </html>
