--- a/07_kiendv/Thuchanh_HTML5_CSS3/css3/democss.html
+++ b/07_kiendv/Thuchanh_HTML5_CSS3/css3/democss.html
@@ -4,10 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Title of the document</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="sass/styles.css">
+<style type="text/css" lang="scss">
+	
+</style>
 </head>
 	<h2>Border radius</h2>
-	<div id="br1"></div>
+	<div id="br1">
+		<div id="text">
+			<p>
+				Day la text
+			</p>
+		</div>
+	</div>
 	<div id="br2"></div>
 	<div id="br3"></div>
 	<div style="clear: both;"></div>
