--- a/07_kiendv/Vinsofts/index.html
+++ b/07_kiendv/Vinsofts/index.html
@@ -3,19 +3,19 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
 	<div class="container">
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-light">
-			<img class="navbar-brand" src="images/logo.png" alt=""></img>
+			<nav class="navbar fix-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
+			<img class="navbar-brand" src="src/images/logo.png" alt="">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -76,7 +76,7 @@
 				</article>
 			</div>
 			<div class="col-sm-4">
-				<img src="images/service2.png" alt="">
+				<img src="src/images/service2.png" alt="">
 				<h4>Website Development</h4>
 				<p>We provide website development services. <br>
 				We are experts in below fields: <br>
@@ -85,7 +85,7 @@
 			<button class="btn btn-primary" type="">Explore more >></button>
 			</div>
 			<div class="col-sm-4">
-				<img src="images/service3.png" alt="">
+				<img src="src/images/service3.png" alt="">
 				<h4>Custom IT & Website Services</h4>
 				<p>We provide other IT and software services too.We have a team of experts in many fields of software development,coding as well as IT related technologies.</p>
 				<button class="btn btn-primary" type="">Explore more >></button>
@@ -95,20 +95,20 @@
 	<section class="container">
 		<h1 class="text-center">OUR CLIENTS</h1>
 		<div class="clients row text-center">
-			<div class="col-sm">
-				<img src="images/client1.png" alt="">
+			<div class="col">
+				<img src="src/images/client1.png" alt="">
 			</div>
-			<div class="col-sm">
-				<img src="images/client2.png" alt="">
+			<div class="col">
+				<img src="src/images/client2.png" alt="">
 			</div>
-			<div class="col-sm">
-				<img src="images/client3.png" alt="">
+			<div class="col">
+				<img src="src/images/client3.png" alt="">
 			</div>
-			<div class="col-sm">
-				<img src="images/client4.png" alt="">
+			<div class="col client4">
+				<img src="src/images/client4.png" alt="">
 			</div>
-			<div class="col-sm">
-				<img src="images/client5.png" alt="">
+			<div class="col client5">
+				<img src="src/images/client5.png" alt="">
 			</div>
 		</div>
 	</section>
@@ -116,17 +116,17 @@
 		<h1 class="text-center">OUR ARTICLES</h1>
 		<div class="articles row text-center">
 			<div class="col-sm">
-				<img src="images/article1.png" alt="">
+				<img src="src/images/article1.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
 			<div class="col-sm">
-				<img src="images/article2.png" alt="">
+				<img src="src/images/article2.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
 			<div class="col-sm">
-				<img src="images/article3.png" alt="">
+				<img src="src/images/article3.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
@@ -200,3 +200,36 @@
 	</footer>
   </body>
 </html>
+<script>
+	$(document).ready(function() {
+  // Custom 
+  var stickyToggle = function(sticky, stickyWrapper, scrollElement) {
+    var stickyHeight = sticky.outerHeight();
+    var stickyTop = stickyWrapper.offset().top;
+    if (scrollElement.scrollTop() >= stickyTop){
+      stickyWrapper.height(stickyHeight);
+      sticky.addClass("is-sticky");
+    }
+    else{
+      sticky.removeClass("is-sticky");
+      stickyWrapper.height('auto');
+    }
+  };
+  
+  // Find all data-toggle="sticky-onscroll" elements
+  $('[data-toggle="sticky-onscroll"]').each(function() {
+    var sticky = $(this);
+    var stickyWrapper = $('<div>').addClass('sticky-wrapper'); // insert hidden element to maintain actual top offset on page
+    sticky.before(stickyWrapper);
+    sticky.addClass('sticky');
+    
+    // Scroll & resize events
+    $(window).on('scroll.sticky-onscroll resize.sticky-onscroll', function() {
+      stickyToggle(sticky, stickyWrapper, $(this));
+    });
+    
+    // On page load
+    stickyToggle(sticky, stickyWrapper, $(window));
+  });
+});
+</script>
