update demo giao dien 3

--- a/01_thangnv/demogiaodien/index.html
+++ b/01_thangnv/demogiaodien/index.html
@@ -16,6 +16,16 @@
             <img src="img/logo.png" alt="Logo">
             <p style="font-size: 9.86px;font-family: Roboto;">You Success, our pride!</p>
         </div>
+        <div class="mini-menu">
+            <select>
+                <option value=""><a href="">Home</a></option>
+                <option value="">Protfolio</option>
+                <option value="">Services</option>
+                <option value="">Gallery</option>
+                <option value="">Contact</option>
+                <option value="">Recruiment</option>
+            </select>
+        </div>
         <div class="menu-contact">
             <dir class="contact">
                 <ul>
@@ -53,7 +63,6 @@
                         </li>
                         <li>
                             <a href="">Recruiment</a>
-                        </li>
                         </li>
                     </ul>
                 </nav>
@@ -145,8 +154,8 @@
                 </div>
             </div>
         </section>
-
         <!-- our-clients -->
+
         <section class="our-clients">
             <div class="header-our-clients">
                 <h1>OUR CLIENTS</h1>
@@ -238,10 +247,10 @@
             <div>
                 <div>
                     <h5>Name</h5>
-                    <div  style="display: flex;">
-                            <input type="text" style="width: 40%;">
-                            <input type="text" style="width: 60%;margin-left: 5px;">
-                    </div>   
+                    <div style="display: flex;">
+                        <input type="text" style="width: 40%;">
+                        <input type="text" style="width: 60%;margin-left: 5px;">
+                    </div>
                 </div>
                 <div>
                     <h5>Email</h5>
@@ -249,7 +258,7 @@
                 </div>
                 <div>
                     <h5>Comment</h5>
-                    <input type="text" style="height: 100px;" >
+                    <input type="text" style="height: 100px;">
                 </div>
                 <input type="submit" value="Submit" style="width:80px;">
             </div>
