--- a/07_kiendv/Vinsofts/index.html
+++ b/07_kiendv/Vinsofts/index.html
@@ -14,47 +14,52 @@
   <body>
 	<div class="container">
 		<header>
-			<nav class="navbar fix-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
-			<img class="navbar-brand" src="src/images/logo.png" alt="">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Protfolio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Gallery</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Recruiment</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
-					</li>
-
-				</ul>
-			</div>
-		</nav>
+			<nav class="navbar fixed-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
+				<img class="navbar-brand" src="src/images/logo.png" alt="">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Protfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Recruiment</a>
+						</li>
+						<li class="nav-item fb">
+							<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+						</li>
+						<li class="nav-item tw">
+							<a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+						</li>
+						<li class="nav-item ig">
+							<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+						</li>
+						<li class="nav-item gg">
+							<a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
+						</li>
+						<li class="nav-item mobile">
+							<a class="fb-mb" href="#"><i class="fab fa-facebook-f"></i></a>
+							<a class="tw-mb" href="#"><i class="fab fa-twitter"></i></a>
+							<a class="ig-mb" href="#"><i class="fab fa-instagram"></i></a>
+							<a class="gg-mb" href="#"><i class="fab fa-google-plus-g"></i></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 		</header>
 	</div>
 	<div class="bg-1">
@@ -68,7 +73,7 @@
 		<h1 class="text-center">OUR SERVICES</h1>
 		<div class="services row text-center">
 			<div class="col-sm-4">
-				<img src="images/service1.png" alt="">
+				<img src="src/images/service1.png" alt="">
 				<article>
 					<h4>Mobile App Development</h4>
 					<p>We are experts in mobile development industry for years. We have a team with 10 skilled developers that have been in this field for at least 5 years so far.</p>
@@ -137,6 +142,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="src/js/index.js"></script>
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -200,36 +206,3 @@
 	</footer>
   </body>
 </html>
-<script>
-	$(document).ready(function() {
-  // Custom 
-  var stickyToggle = function(sticky, stickyWrapper, scrollElement) {
-    var stickyHeight = sticky.outerHeight();
-    var stickyTop = stickyWrapper.offset().top;
-    if (scrollElement.scrollTop() >= stickyTop){
-      stickyWrapper.height(stickyHeight);
-      sticky.addClass("is-sticky");
-    }
-    else{
-      sticky.removeClass("is-sticky");
-      stickyWrapper.height('auto');
-    }
-  };
-  
-  // Find all data-toggle="sticky-onscroll" elements
-  $('[data-toggle="sticky-onscroll"]').each(function() {
-    var sticky = $(this);
-    var stickyWrapper = $('<div>').addClass('sticky-wrapper'); // insert hidden element to maintain actual top offset on page
-    sticky.before(stickyWrapper);
-    sticky.addClass('sticky');
-    
-    // Scroll & resize events
-    $(window).on('scroll.sticky-onscroll resize.sticky-onscroll', function() {
-      stickyToggle(sticky, stickyWrapper, $(this));
-    });
-    
-    // On page load
-    stickyToggle(sticky, stickyWrapper, $(window));
-  });
-});
-</script>
