--- a/05_tupa/cat-giao-dien/index.html
+++ b/05_tupa/cat-giao-dien/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="view-port" content="width= device-width">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Trang Chủ</title>
 </head>
 <body>
@@ -26,8 +28,8 @@
                         <li><img src="images/phone.jpg" alt="phone">Hotline: 0988 988 988</li>
                     </ul>
                 </div>
-                <nav>
-                    <ul class="menu">
+                <div class="menu">
+                    <ul class="menu-con">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Protfolio</a></li>
                         <li><a href="#">Services</a></li>
@@ -41,14 +43,27 @@
                             <li><a href="#"><img src="images/in.jpg" alt=""></a></li>
                             <li><a href="#"><img src="images/g.jpg" alt=""></a></li>
                     </ul>
-                </nav>
+                </div>
             </div>
         </header>
         <!-- end header -->
+        <!-- menu responsive -->
+        <nav class="menu-responsive">
+            <select>
+                <option value="#">Home</option>
+                <option value="#">Protfolio</option>
+                <option value="#">Services</option>
+                <option value="#">Gallery</option>
+                <option value="#">Contact</option>
+                <option value="#">Recruitment</option>
+            </select>
+
+        </nav>
+        <!-- end menu -->
         <!-- slide -->
         <div class="w3-content w3-section slide">
-            <img class="mySlides" src="images/slide1.jpg" width="1000px" height="300px">
-            <img class="mySlides" src="images/silde2.jpg" width="1000px" height="300px">
+            <img class="mySlides" src="images/slide1.jpg" width="100%" height="300px">
+            <img class="mySlides" src="images/silde2.jpg" width="100%" height="300px">
             <div class="text-title">WEB DESIGN COMPANY REPUPATION</div>
             <div class="text-content">we've been brougth the most valued products and
                     servecies to our global clients during last 10 year</div>
@@ -122,6 +137,7 @@
                     <li><img src="images/people5.jpg" alt=""></li>
                 </ul>
             </article>
+            <div class="clear" style="clear: both"></div>
             <section class="title">
                  <div class="line"></div>
                 <p>OUR ARTICLE</p>
@@ -184,7 +200,7 @@
             <div class="footer-info">
                 <p class="footer-info-title">OUR INFO</p>
                 <div class="line1" style="border:1px solid #404040; margin-bottom:20px; width:300px;"></div>
-                <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBynM-M9Wbv9_qEK3QwTRVcpuygF9Lttqo"></script><div style="overflow:hidden;height:250px;width:300px;"><div id="gmap_canvas" style="height:250px;width:300px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net/wordpress-blog/" id="get-map-data">wordpress blog themes</a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(21.040587,105.786849),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.040587, 105.786849)});infowindow = new google.maps.InfoWindow({content:"<b>Cty Vinsoft</b><br/><b>Địa chỉ:</b>Số 8 - Phan Văn Trường - Cầu Giấy<br/> " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+                <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBynM-M9Wbv9_qEK3QwTRVcpuygF9Lttqo"></script><div style="overflow:hidden;height:250px;width:300px; color: black;"><div id="gmap_canvas" style="height:250px;width:300px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net/wordpress-blog/" id="get-map-data">wordpress blog themes</a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(21.040587,105.786849),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.040587, 105.786849)});infowindow = new google.maps.InfoWindow({content:"<b>Cty Vinsoft</b><br/><b>Địa chỉ:</b>Số 8 - Phan Văn Trường - Cầu Giấy<br/> " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
                 <p>Số 8 Phan Văn Trường - Cầu Giấy - Hà Nội</p>
             </div>
         </footer>
